syntax = "proto3";

package repos;

option go_package="/repos";

service RepositoriesService {
    rpc GetRepositories (GetRepositoriesRequest) returns (GetRepositoriesResponse);
    rpc GetReposFetchHistory (GetReposFetchHistoryRequest) returns (GetReposFetchHistoryResponse);
    rpc GetRepositoryNames (GetRepositoryNamesRequest) returns (GetRepositoryNamesResponse);
}

message Repository {
  string name = 1;
  string description = 2;
  string url = 3;
  string language = 4;
  int32 forks_count = 5;
  int32 stars_count = 6;
  int32 open_issues_count = 7;
  int32 watchers_count = 8;
}

message GetRepositoriesRequest {
}

message GetRepositoriesResponse {
  repeated Repository repositories = 1;
}

message GetReposFetchHistoryRequest{}

message GetReposFetchHistoryResponse{
  string lastFetchTime = 1;
  int32  lastPage = 2;
}

message GetRepositoryNamesRequest {}

message GetRepositoryNamesResponse {
  repeated string repositories = 1;
}

